--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "resistance",
+  "name": "social-deduction-party-game",
   "version": "1.0.0",
   "description": "A Vue.js project",
-  "author": "Jake Coffman <jake.coffman@wwt.com>",
+  "author": "Jake Coffman <jake@jakecoffman.com>",
   "private": true,
   "scripts": {
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
