--- a/static/manifest.json
+++ b/static/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "The Resistance",
-  "short_name": "Resistance",
+  "name": "Social Deduction Party Game",
+  "short_name": "Party Game",
   "theme_color": "#000000",
   "background_color": "#000000",
   "display": "standalone",
